--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   cupertino_icons: ^1.0.6
   flutter_svg: ^1.0.0
   pie_chart: ^5.0.0
+  flutter_colorpicker: 1.1.0
 
 dev_dependencies:
   flutter_test:
